# geris

./: README.md  geris.py  gerisrc  pyproject.toml  setup.cfg
geris/: __init__.py  gitea.py  tui.py  utils.py
