[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geris"
version = "0.1.3"
description = "Terminal-based Gitea issue management with OpenAI tool calling integration"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mike 'Fuzzy' Partin", email = "fuzzy@thwap.org" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Bug Tracking"
]

dependencies = [
  "openai",
  "giteapy",
  "textual",
  "rich"
]

[project.scripts]
geris = "geris:main"

[tool.setuptools]
packages = ["geris"]  # Or use find: if geris2.py is in a folder with __init__.py

[tool.setuptools.package-data]
"*" = ["*.md", "*.css"]

[tool.flake8]
max-line-length = 100
ignore = [
  "E203",
  "W503"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["geris"]

[tool.coverage.report]
show_missing = true
skip_covered = true
