[metadata]
name = geris
version = 0.1.0
author = Mike 'Fuzzy' Partin <fuzzy@thwap.org>
description = Gitea Issue Manager with OpenAI Tooling and a sexy Textual UI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Bug Tracking

[options]
packages = find:
install_requires =
    openai
    giteapy
    rich
    textual

python_requires = >=3.9

[options.entry_points]
console_scripts =
    geris = geris:main

[options.package_data]
* = *.css, *.md

[flake8]
max-line-length = 100
ignore = 
    E203,
    W503

